--- a/Pipfile
+++ b/Pipfile
@@ -5,6 +5,9 @@ verify_ssl = true
 
 [dev-packages]
 flake8 = "*"
+black = "*"
+pylint = "*"
+pytest = "*"
 
 [packages]
 requests = ">=2.20.0"
@@ -12,3 +15,6 @@ flask = ">=1.0.0"
 
 [requires]
 python_version = "3.7"
+
+[pipenv]
+allow_prereleases = true
